2003-07-18  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-editor-area-bin.c, cong-editor-area-composer.c, cong-editor-area-composer.h, cong-editor-area-container.c, cong-editor-area-container.h, cong-editor-widget3.c

	Container areas now have an add_after method
	
	* cong-debug-log-view.c

	Made the signal callbacks static

2003-07-18  Geert Stappers <Geert.Stappers@xs4all.nl>

	* cong-editor-area-span-tag.c

	Moved the line
	g_assert (PRIVATE(span_tag)->span_vcompose);
	down to avoid a C99 issue

2003-07-17  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-editor-area-bin.c, cong-editor-area-composer.c, cong-editor-area-container.c, cong-editor-area-container.h, cong-editor-area.c, cong-editor-widget3.c

	Track tree modifications to the document in the editor widget.
	
	* cong-document.c

	Fixed the signal emission flags.

	* cong-editor-widget3.c

	Listen to document signals
	
	* cong-editor-node-document.c, cong-editor-node-element-span.c, cong-editor-node-element-structural.c, cong-editor-node-element-unknown.c, cong-editor-node-text.c, cong-editor-node-unimplemented.c, cong-editor-node.h

	Suppress some of the debug spew
	
	* cong-editor-area-bin.c, cong-editor-area-border.c, cong-editor-area-composer.c, cong-editor-area-container.c, cong-editor-area-container.h, cong-editor-area-pixbuf.c, cong-editor-area-spacer.c, cong-editor-area-span-tag.c, cong-editor-area-structural-tag.c, cong-editor-area-text.c, cong-editor-area-underline.c, cong-editor-area-unknown-tag.c, cong-editor-area.c, cong-editor-area.h, cong-editor-widget3.c

	Allow areas to change their requisition

	* cong-document.c

	Fixed mismatched signal class struct offsets	
	
2003-07-16  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-editor-area-text.c, cong-editor-area-text.h, cong-editor-area.c, cong-editor-area.h, cong-editor-node-text.c, cong-editor-widget3-impl.h, cong-editor-widget3.c
