@@ -129,7 +129,10 @@ gint tree_cut(GtkWidget *widget, CongNodePtr tag)
 	/* GREP FOR MVC */
 
 	if (cong_app_singleton()->clipboard) cong_node_recursive_delete(NULL, cong_app_singleton()->clipboard);
+
 	cong_app_singleton()->clipboard = cong_node_recursive_dup(tag);
+	CONG_NODE_SELF_TEST(cong_app_singleton()->clipboard);
+
 	cong_node_recursive_delete(doc, tag);
 
 	return(TRUE);
@@ -142,6 +145,7 @@ gint tree_copy(GtkWidget *widget, CongNodePtr tag)
 
 	if (cong_app_singleton()->clipboard) cong_node_recursive_delete(NULL, cong_app_singleton()->clipboard);
 	cong_app_singleton()->clipboard = cong_node_recursive_dup(tag);
+	CONG_NODE_SELF_TEST(cong_app_singleton()->clipboard);
 
 	return(TRUE);
 }
